Fix Recent Object Comments layout to not overflow.
Changes float: left with 25% width, to display: inline-block with 25%
width and some mild hackery to prevent css from caring about the
newlines between elements. This prevents the layout from breaking at
certain screen sizes. Closes #105. Fixes zooniverse/Radio-Galaxy-Zoo#103

--- a/css/recents.styl
+++ b/css/recents.styl
@@ -28,9 +28,19 @@
       display: none
   
   .subjects .list .subject-summaries
+    line-height: 0  
+    margin: 0
+    font-size: 0
+    letter-spacing: -1
+    
     .subject-summary
       hovered()
       padding: 10px 20px
+      letter-spacing: normal
+      vertical-align: top
+      float: none
+      display: inline-block
+
       
       &:before
         border-left: none
@@ -38,6 +48,7 @@
 
       img
         max-height: 200px
+        max-width: 200px
   
   .board.discussions .discussion-summary
     hovered()
